1.a.Basic-App-with-TLS-staging/app/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  rules:
  - host: wordpress.your-domain.test.com
    http:
      paths:
      - backend:
          serviceName: wordpress
          servicePort: 80
        path: /
  tls:
  - hosts:
    - wordpress.your-domain.test.com
    secretName: wordpress-cert
